# graphrag-rs-nix

./: .gitignore  MODELS.md  README.md  TODO.md  flake.nix  graphrag-e2e.sh  todo.md
crates/graphrag-mcp/: Cargo.toml
crates/graphrag-mcp/src/: main.rs
crates/knowledge-mcp/: Cargo.toml
crates/knowledge-mcp/src/: main.rs
crates/knowledge-watcher/: Cargo.toml
crates/knowledge-watcher/src/: main.rs
crates/memory-mcp/: Cargo.toml
crates/memory-mcp/src/: logging.rs  main.rs
modules/: claude-code.nix  home-manager.nix  nixos.nix
modules/nixos/: default.nix  ovms-pull.nix
pkgs/: claude-code-memory-plugin.nix  graphrag-mcp.nix  graphrag-rs.nix  knowledge-mcp.nix  knowledge-watcher.nix  memory-mcp.nix  pi-memory-plugin.nix
plugins/claude-code-memory/: CLAUDE.md  README.md
plugins/claude-code-memory/.claude-plugin/: plugin.json
plugins/claude-code-memory/skills/consolidate-memory/: SKILL.md
plugins/claude-code-memory/skills/document-decision/: SKILL.md
plugins/claude-code-memory/skills/log-session-action/: SKILL.md
plugins/claude-code-memory/skills/recall-and-think/: SKILL.md
plugins/obsidian/graphrag-gateway/: README.md  esbuild.config.mjs  main.js  manifest.json  package-lock.json  package.json  test-blocks.mjs  tsconfig.json
plugins/obsidian/graphrag-gateway/src/: blocks.ts  client.ts  gateway-server.ts  ingest.ts  main.ts  state.ts  types.ts
plugins/pi-memory/: build.mjs  package-lock.json  package.json  tsconfig.json
plugins/pi-memory/src/: catalog.test.ts  catalog.ts  config.test.ts  config.ts  distill.test.ts  distill.ts  index.test.ts  index.ts  kinds.test.ts  kinds.ts  memory-client.ts  sse.ts  types.ts  ui.ts
plugins/pi-memory/src/hooks/: before_agent_start.test.ts  before_agent_start.ts  commands.ts  lifecycle.ts  message_end_cache.ts  message_end_distill.test.ts  message_end_distill.ts  message_end_filter.test.ts  message_end_filter.ts
plugins/pi-memory/src/tools/: catalog.ts  forget.ts  log_action.ts  log_decision.ts  recall.ts  remember.ts  status.ts
plugins/pi-memory/test/integration/: pi-live-smoke.sh  plugin-smoke.test.ts
scripts/: bench-extraction.sh  blocks-e2e.sh  coalescer-e2e.sh  concurrent-recall-e2e.sh  latency-smoke.sh  multi-client-stale-e2e.sh  path-ingest-e2e.sh  recall-parallel-e2e.sh  stale-context-e2e.sh  upsert-e2e.sh  watcher-e2e.sh
