[package]
name = "graphrag-mcp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Stdio MCP server proxying tools to a graphrag-rs REST instance"

[[bin]]
name = "graphrag-mcp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
