[package]
name = "memory-mcp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Stdio MCP server exposing the user's long-term memory (recall/remember/forget) over a graphrag-rs REST backend"

[[bin]]
name = "memory-mcp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
